basic chat function enabled, changed color of jumbotron in userpage

--- a/group_play.html
+++ b/group_play.html
@@ -21,13 +21,16 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-    	Hey Chris!
+    	Hey Chris! &#160;
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button>
     </form>
   </div>
 	</nav>
 
 	<ul class="list-group list-group-userplay">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <h4>Your Groups</h4>
+  </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     Fencing
     <span class="badge badge-primary badge-pill">14</span>
@@ -60,9 +63,36 @@
     2048
     <span class="badge badge-primary badge-pill">1</span>
   </li>
+     <li class="list-group-item d-flex justify-content-between align-items-center">
+    Cricket
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+     <li class="list-group-item d-flex justify-content-between align-items-center">
+    Mariachi
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+     <li class="list-group-item d-flex justify-content-between align-items-center">
+    Banjo
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+     <li class="list-group-item d-flex justify-content-between align-items-center">
+    Cookie making
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
 </ul>
 
+<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Reply..." aria-label="Recipient's username" aria-describedby="basic-addon2" id="chat">
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary" type="button" onclick="sendchat()">Send</button>
+  </div>
+</div>
 
+<div class="card chat">
+  <div class="card-body" id="card-body">
+  </div>
+</div>
+<script src="group_play.js"></script>
 	
 </body>
 </html>
