--- a/userpage.html
+++ b/userpage.html
@@ -21,7 +21,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-    	Hey Chris!
+    	Hey Chris! &#160;
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button>
     </form>
   </div>
@@ -36,23 +36,23 @@
 <div class="card w-75">
   <div class="card-body">
     <h5 class="card-title">Michael has mastered fencing!</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <p class="card-text">08/27 - Michael has been fencing for over fifty days, mastering over three techniques.</p>
   </div>
   <div class="card-body">
     <h5 class="card-title">Greg started baking today!</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <p class="card-text">Click here to view Greg's recently baked cupcake!</p>
   </div>
   <div class="card-body">
     <h5 class="card-title">Join Matt at honing soccer skills</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <p class="card-text">Want to learn how to dribble like Neymar? Ask Matt, who's handling the dribbling skill well!</p>
   </div>
     <div class="card-body">
     <h5 class="card-title">Want to learn to play the violin? Talk to Julia!</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <p class="card-text">Listen to some soothing Chopin as Julia truly excels.</p>
   </div>
     <div class="card-body">
     <h5 class="card-title">Hit a hole in one with Freddy!</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <p class="card-text">We're very impressed with Freddy, is he the next Tiger Woods?</p>
   </div>
 </div>
 
@@ -86,7 +86,19 @@
     <span class="badge badge-primary badge-pill">1</span>
   </li>
    <li class="list-group-item d-flex justify-content-between align-items-center">
-    2048
+    Cricket
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+     <li class="list-group-item d-flex justify-content-between align-items-center">
+    Mariachi
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+     <li class="list-group-item d-flex justify-content-between align-items-center">
+    Banjo
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+     <li class="list-group-item d-flex justify-content-between align-items-center">
+    Cookie making
     <span class="badge badge-primary badge-pill">1</span>
   </li>
 </ul>
