--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
 
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
-                    <button class="btn btn-default" onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
+                    <button class="btn btn-default" onclick="document.getElementById('modal').style.display='block'">Sign Up</button>
                     <button class="btn btn-default" >Sign In</button>
                 </div>
                 <form class="navbar-form navbar-left">
@@ -42,8 +42,8 @@
 		</div>
 	</div>
 
-	<div id="id01" class="modal">
-	  <span onclick="document.getElementById('id01').style.display='none'" id="closeBtm" title="Close Form">&times;</span>
+	<div id="modal" class="modal">
+	  <span onclick="document.getElementById('modal').style.display='none'" id="closeBtm" title="Close Form">&times;</span>
 	  <form class="modal-content" action="/action_page.php">
 	    <div class="container">
 	      <h1>Sign Up</h1>
@@ -62,7 +62,7 @@
 	      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
 	      <div class="clearfix">
-	        <button class="formBtn" type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn">Cancel</button>
+	        <button class="formBtn" type="button" onclick="document.getElementById('modal').style.display='none'" id="cancelbtn">Cancel</button>
 	        <button class="formBtn" type="submit" id="signupbtn">Sign Up</button>
 	      </div>
 	    </div>
