Added in common navbars and made some modifications for cleaner look

--- a/guitar.html
+++ b/guitar.html
@@ -1,14 +1,33 @@
 <html>
   <head>
     <title>Guitar Page</title>
-    <link rel="stylesheet" type="text/css" href="guitar.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="guitar.css"/>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
+    <nav class="navbar navbar-default">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="homepage.html">Skill-It</a>
+            </div>
+
+            <div class="collapse navbar-collapse">
+                <div class="navbar-form navbar-right">
+                    Hey Chris! &#160;
+                    <button type="button" class="btn btn-success" href="#">Logout</button>
+                </div>
+                <form class="navbar-form navbar-left">
+                  <a class="btn btn-default" href="skills_list.html" role="button">All Skills</a>
+                  <a class="btn btn-default" href="#" role="button">+</a>
+                </form>
+            </div>
+        </nav>
+
+
     <div class="grid-container">
       <div class="header">
         <h1>GUITAR PLAYING STATEGIES</h1>
@@ -110,6 +129,12 @@
       </div>
     </div>
 
+    <div class="footer">
+      <div class="copyright text-center">
+        <p>© 2018 Skill list All rights reserved | Design by NU students
+        </p>
+      </div>
+    </div>
         <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
@@ -141,5 +166,6 @@
         </div>
       </div>
     </div>
+
   </body>
 </html>
