--- a/homepage.html
+++ b/homepage.html
@@ -12,13 +12,13 @@
 <body>
 	<nav class="navbar navbar-default">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Skill-It</a>
+                <a class="navbar-brand" href="#">Skill-It</a>
             </div>
 
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
                     <button class="btn btn-default" onclick="document.getElementById('modal').style.display='block'">Sign Up</button>
-                    <button class="btn btn-default" >Sign In</button>
+                    <button class="btn btn-default" onclick="document.getElementById('login').style.display='block'">Login</button>
                 </div>
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
@@ -34,13 +34,19 @@
 			<div class="col-lg-12">
 				<div id="content">
 				<h1 id = "title">Skill-It</h1>
-				<h3 id = "lead">Learn whatever you want from all over the world</h3>
+				<h3 id = "lead">Learn, track, and practice your skill the easy way!</h3>
 				<hr id="hr1">
-				<button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Get Started!</button>
+                <form action="skills_list.html">
+				<button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skill List!</button>
+                </form>
 				</div>
 			</div>
 		</div>
 	</div>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
 
 	<div id="modal" class="modal">
 	  <span onclick="document.getElementById('modal').style.display='none'" id="closeBtm" title="Close Form">&times;</span>
@@ -54,7 +60,7 @@
 	      <input class = "inputText" type="password" placeholder="Enter Password" name="psw" required>
 
 	      <input class = "inputText" type="password" placeholder="Repeat Password" name="psw-repeat" required>
-	      
+
 	      <label>
 	        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
 	      </label>
@@ -68,10 +74,28 @@
 	    </div>
 	  </form>
 	</div>
-	
 
-	
-	
+    <div id="login" class="modal">
+      <span onclick="document.getElementById('modal').style.display='none'" id="closeBtm" title="Close Form">&times;</span>
+      <form class="modal-content" action="userpage.html">
+        <div class="container">
+          <h1>Login</h1>
+          <hr id = "hr2">
+          <input class = "inputText" type="text" placeholder="Enter Email" name="email" required>
+
+          <input class = "inputText" type="password" placeholder="Enter Password" name="psw" required>
+
+          <div class="clearfix">
+            <button class="formBtn" type="button" onclick="document.getElementById('login').style.display='none'" id="cancelbtn">Cancel</button>
+            <button class="formBtn" type="submit" id="signupbtn">Login</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+
+
+
 
 </body>
 </html>
