--- a/group_play.html
+++ b/group_play.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Skill-It</a>
+  <a class="navbar-brand" href="homepage.html">Skill-It</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -14,7 +14,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">All Skills <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="skills_list.html">All Skills <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">+</a>
@@ -30,6 +30,10 @@
 	<ul class="list-group list-group-userplay">
   <li class="list-group-item d-flex justify-content-between align-items-center">
     <h4>Your Groups</h4>
+  <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center">
+    Group Play
+    <span class="badge badge-primary badge-pill">0</span>
+  </li>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     Fencing
@@ -75,8 +79,8 @@
     Banjo
     <span class="badge badge-primary badge-pill">1</span>
   </li>
-     <li class="list-group-item d-flex justify-content-between align-items-center">
-    Cookie making
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Cookie Making
     <span class="badge badge-primary badge-pill">1</span>
   </li>
 </ul>
@@ -92,7 +96,15 @@
   <div class="card-body" id="card-body">
   </div>
 </div>
+<br/>
+<br/>
+<br/>
+<br/>
+<div class="copyright text-center">
+        <p>© 2018 Skill list All rights reserved | Design by NU students
+        </p>
+</div>
 <script src="group_play.js"></script>
-	
+
 </body>
 </html>
