--- a/userpage.html
+++ b/userpage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Skill-It</a>
+  <a class="navbar-brand" href="homepage.html">Skill-It</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -14,7 +14,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">All Skills <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="skills_list.html">All Skills <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">+</a>
@@ -102,5 +102,9 @@
     <span class="badge badge-primary badge-pill">1</span>
   </li>
 </ul>
+<div class="copyright text-center">
+  <p>© 2018 Skill list All rights reserved | Design by NU students
+  </p>
+</div>
 </body>
 </html>
