wrapped guitar pic with link

--- a/skills_list.html
+++ b/skills_list.html
@@ -124,7 +124,7 @@
 					</div>
 					<div class="cart-grid" id="cart-7">
 						<div class="img">
-							<img src="images/d2.jpg" alt="img">
+							<a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
 						</div>
 						<ul class="info">
 							<li>Guitar Playing</li>
