--- a/guitar.html
+++ b/guitar.html
@@ -18,7 +18,7 @@
 
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
-                    Hey Chris! &#160;
+                  <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
