--- a/userpage.html
+++ b/userpage.html
@@ -15,14 +15,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="skills_list.html">All Skills <span class="sr-only">(current)</span></a>
+        <a class="btn btn-outline-secondary" href="skills_list.html" role="button">All Skills</a>&#160; &#160;
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">+</a>
+        <a class="btn btn-outline-secondary" href="#" role="button">+</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-    	Hey Chris! &#160;
+    <a class="btn btn-primary" href="userpage.html" role="button">Hey Chris!</a>&#160; &#160;
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button>
     </form>
   </div>
