Updated skills button to say All Skills/Groups

--- a/skills_list.html
+++ b/skills_list.html
@@ -27,7 +27,7 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-default" href="skills_list.html" role="button">All Skills</a>
+                  <a class="btn btn-default" href="skills_list.html" role="button">All Skills/Groups</a>
                   <a class="btn btn-default" href="#" role="button">+</a>
                 </form>
             </div>
