--- a/group_play.html
+++ b/group_play.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="btn btn-outline-secondary" href="skills_list.html" role="button">All Skills</a>&#160; &#160;
+        <a class="btn btn-outline-secondary" href="skills_list.html" role="button">All Skills/Groups</a>&#160; &#160;
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-secondary" href="#" role="button">+</a>
