fixed button issue maybe

--- a/skills_list.html
+++ b/skills_list.html
@@ -130,7 +130,7 @@
 							<li>Guitar Playing</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="guitar.html" method="post">
+							<form action="guitar.html">
 								<button type="submit" class="button w3l-cart" data-id="group-7">Strategies & Groups</button>
 							</form>
 						</div>
