--- a/skills_list.html
+++ b/skills_list.html
@@ -48,7 +48,7 @@
 							<li>Laser Tag</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="#" method="post">
+							<form action="#">
 								<button type="submit" class="button w3l-cart" data-id="group-1">Strategies & Groups</button>
 							</form>
 						</div>
@@ -61,7 +61,7 @@
 							<li>Cooking Entry</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="#" method="post">
+							<form action="#">
 								<button type="submit" class="button w3l-cart" data-id="group-2">Strategies & Groups</button>
 							</form>
 						</div>
@@ -74,7 +74,7 @@
 							<li>Piano (mid-level)</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="#" method="post">
+							<form action="#">
 								<button type="submit" class="button w3l-cart" data-id="group-3">Strategies & Groups</button>
 							</form>
 						</div>
@@ -87,7 +87,7 @@
 							<li>Work Out Tips</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="#" method="post">
+							<form action="#">
 								<button type="submit" class="button w3l-cart" data-id="group-4">Strategies & Groups</button>
 							</form>
 						</div>
@@ -104,7 +104,7 @@
 							<li>Leather Working</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="#" method="post">
+							<form action="#">
 								<button type="submit" class="button w3l-cart" data-id="group-5">Strategies & Groups</button>
 							</form>
 						</div>
@@ -117,7 +117,7 @@
 							<li>Ice Skating</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="#" method="post">
+							<form action="#">
 								<button type="submit" class="button w3l-cart" data-id="group-6">Strategies & Groups</button>
 							</form>
 						</div>
@@ -143,7 +143,7 @@
 							<li>Dance</li>
 						</ul>
 						<div class="snipcart-details ">
-							<form action="#" method="post">
+							<form action="#">
 								<button type="submit" class="button w3l-cart" data-id="group-8">Strategies & Groups</button>
 							</form>
 						</div>
@@ -155,7 +155,7 @@
 		</div>
 	<!-- //cart's-Product-Display -->
 		<div class="wthreecartaits wthreecartaits2 cart cart box_1">
-			<form action="#" method="post" class="last">
+			<form action="#" class="last">
 				<button class="w3view-cart" type="submit" name="submit" value="">back to top
 					<span class="fa fa-object-group" aria-hidden="true"></span>
 				</button>
