--- a/homepage.html
+++ b/homepage.html
@@ -56,6 +56,9 @@
 	      <h1>Sign Up</h1>
 	      <p>Please fill in this form to create an account.</p>
 	      <hr class = "hr2">
+
+          <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
+
          <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
 
 	      <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
@@ -85,7 +88,7 @@
         <div class="container">
           <h1>Login</h1>
           <hr class = "hr2">
-          <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
+          <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
 
           <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
 
