--- a/homepage.html
+++ b/homepage.html
@@ -13,15 +13,21 @@
 <body>
 	<nav class="navbar navbar-default">
             <div class="navbar-header">
+            	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-part" aria-expanded="false">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			    </button>
                 <a class="navbar-brand" href="/">Skill-It</a>
             </div>
 
-            <div class="collapse navbar-collapse">
-                <div class="navbar-form navbar-right">
-                    <button class="btn btn-default" data-toggle="modal" data-target="#signUpModal">Sign Up</button>
-                    <button class="btn btn-default" data-toggle="modal" data-target="#logInModal">Log In</button>
-                </div>
-                <form class="navbar-form navbar-left">
+            <div class="collapse navbar-collapse" id="collapse-part">
+            	<ul class="nav navbar-nav navbar-right">
+			        <li><a href="" data-toggle="modal" data-target="#signUpModal" class="userBtn">Sign up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+			        <li><a href="" data-toggle="modal" data-target="#logInModal" class="userBtn">Login <i class="fa fa-user" aria-hidden="true"></i></a></li>
+			    </ul>
+                <form class="navbar-form navbar-right">
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Search">
                     </div>
