Updated homepage with Bruce's updates

--- a/homepage.html
+++ b/homepage.html
@@ -13,14 +13,20 @@
 <body>
 	<nav class="navbar navbar-default">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-part" aria-expanded="false">
+                   <span class="sr-only">Toggle navigation</span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+               </button>
                 <a class="navbar-brand" href="#">Skill-It</a>
             </div>
 
-            <div class="collapse navbar-collapse">
-                <div class="navbar-form navbar-right">
-                    <button class="btn btn-default" onclick="document.getElementById('modal').style.display='block'">Sign Up</button>
-                    <button class="btn btn-default" onclick="document.getElementById('login').style.display='block'">Login</button>
-                </div>
+            <div class="collapse navbar-collapse" id="collapse-part">
+               <ul class="nav navbar-nav navbar-right">
+                   <li><a href="" data-toggle="modal" data-target="#signUpModal" class="userBtn">Sign up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+                   <li><a href="" data-toggle="modal" data-target="#logInModal" class="userBtn">Login <i class="fa fa-user" aria-hidden="true"></i></a></li>
+               </ul>
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Search">
@@ -37,8 +43,9 @@
 				<h1 id = "title">Skill-It</h1>
 				<h3 id = "lead">Learn, track, and practice your skill the easy way!</h3>
 				<hr id="hr1">
-                <form action="skills_list.html">
-				<button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skill List!</button>
+				<form action="skills_list.html">
+                   <button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skills List!</button>
+                </form>
                 </form>
 				</div>
 			</div>
@@ -49,60 +56,67 @@
     <br/>
     <br/>
 
-	<div id="modal" class="modal">
-	   <span onclick="document.getElementById('modal').style.display='none'" id="closeBtm" title="Close Form">&times;</span>
-	   <form class="modal-content" action="/action_page.php">
-	   <div class="container">
-	      <h1>Sign Up</h1>
-	      <p>Please fill in this form to create an account.</p>
-	      <hr class = "hr2">
 
-          <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
+   <div class="modal fade" id="signUpModal" role="dialog">
+       <div class="signDialog modal-dialog " role="document">
+           <div class="modal-content">
+               <div class="modal-header">
+                 <button type="button" class="close" data-dismiss="modal">&times;</button>
+                 <h2 class="modal-title">Sign Up</h2>
+                 <p>Please fill in this form to create an account.</p>
+               </div>
 
-         <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
+               <div class="modal-body">
+                 <form action="userpage.html" method = "post" class="modal-form">
+                    <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
 
-	      <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
+                   <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
 
-	      <input class = "form-control inputText" type="password" placeholder="Repeat Password" name="psw-repeat" required>
+                   <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
 
-	      <label>
-	        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-	      </label>
+                   <input class = "form-control inputText" type="password" placeholder="Repeat Password" name="psw-repeat" required>
+                   <p>Already have an account?
+                        <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#logInModal">Log In Here</a></p>
+                    <div class="modal-footer">
+                       <label>
+                           <input type="checkbox" checked="checked" name="remember"> Remember me
+                       </label>
+                       <p >By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+                       <button class="btn btn-success btn-lg submitBtn" type="submit">GET STARTED</button>
+                   </div>
+                  </form>
+               </div>
 
-	       <div>
-            <button class="formBtn btn btn-danger" type="button" onclick="document.getElementById('modal').style.display='none'" id="cancelbtn">Cancel</button>
-            <button class="formBtn btn btn-success" type="submit" id="signupbtn">Sign Up</button>
-        </div>
-         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-         <hr class="hr2">
-       <p></p>Already have an account? <a href="#" onclick="document.getElementById('login').style.display='block';document.getElementById('modal').style.display='none'">Login</a></p>
-       <!-- <a href="#" data-toggle="modal" data-target="#exampleModalCenter"> -->
-	      </div>
-	    </div>
-	  </form>
-	</div>
+           </div>
+       </div>
+   </div>
 
-    <div id="login" class="modal">
-      <span onclick="document.getElementById('modal').style.display='none'" id="closeBtm" title="Close Form">&times;</span>
-      <form class="modal-content" action="userpage.html">
-        <div class="container">
-          <h1>Login</h1>
-          <hr class = "hr2">
-          <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
+   <div class="modal fade" id="logInModal" role="dialog">
+       <div class="signDialog modal-dialog " role="document">
+           <div class="modal-content">
+               <div class="modal-header">
+                 <button type="button" class="close" data-dismiss="modal">&times;</button>
+                 <h2 class="modal-title">Log In</h2>
+               </div>
 
-          <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
+               <div class="modal-body">
+                 <form action="userpage.html" method = "post" class="modal-form">
+                   <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
 
-          <div>
-           <button class="formBtn btn btn-danger" type="button" onclick="document.getElementById('login').style.display='none'" id="cancelbtn">Cancel</button>
-           <button class="formBtn btn btn-success" type="submit" id="signupbtn">Login</button>
-          </div>
-        </div>
-      </form>
-    </div>
+                   <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
 
-
-
-
+                   <p>Don't have an account!
+                        <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#signUpModal"">Sign Up Here</a></p>
+                    <div class="modal-footer">
+                       <label>
+                           <input type="checkbox" checked="checked" name="remember"> Remember me
+                       </label>
+                       <button class="btn btn-success btn-lg submitBtn" type="submit">LOG IN</button>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </div>
 
 </body>
 </html>
