Maybe fixed link issue?

--- a/homepage.html
+++ b/homepage.html
@@ -67,7 +67,7 @@
                </div>
 
                <div class="modal-body">
-                 <form action="userpage.html" method = "post" class="modal-form">
+                 <form action="userpage.html" class="modal-form">
                     <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
 
                    <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
@@ -100,7 +100,7 @@
                </div>
 
                <div class="modal-body">
-                 <form action="userpage.html" method = "post" class="modal-form">
+                 <form action="userpage.html" class="modal-form">
                    <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
 
                    <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
