--- a/skills_list.html
+++ b/skills_list.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html>
 <!-- Head -->
 
 <head>
 	<title>Skill List</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="//fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">
-	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link rel="stylesheet" href="css/font-awesome.css" type="text/css" media="all">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
@@ -38,124 +36,88 @@
 				<span class="fa fa-object-group" aria-hidden="true"></span>Skill List</h1>
 		</div>
 		<div class="wthreeproductdisplay">
-			<div class="container">
-				<div class="top-grid">
-					<div class="cart-grid" id="cart-1">
-						<div class="img">
-							<img src="images/d5.jpg" alt="img">
-						</div>
-						<ul class="info">
-							<li>Laser Tag</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="#">
-								<button type="submit" class="button w3l-cart" data-id="group-1">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-					<div class="cart-grid" id="cart-2">
-						<div class="img">
-							<img src="images/d1.jpg" alt="img">
-						</div>
-						<ul class="info">
-							<li>Cooking Entry</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="#">
-								<button type="submit" class="button w3l-cart" data-id="group-2">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-					<div class="cart-grid" id="cart-3">
-						<div class="img">
-							<img src="images/d8.jpg" alt="img">
-						</div>
-						<ul class="info">
-							<li>Piano (mid-level)</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="#">
-								<button type="submit" class="button w3l-cart" data-id="group-3">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-					<div class="cart-grid" id="cart-4">
-						<div class="img">
-							<img src="images/d4.png" alt="img">
-						</div>
-						<ul class="info">
-							<li>Work Out Tips</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="#">
-								<button type="submit" class="button w3l-cart" data-id="group-4">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-
-					<div class="clear"></div>
-				</div>
-				<div class="bot-grid">
-					<div class="cart-grid" id="cart-5">
-						<div class="img">
-							<img src="images/d7.jpeg" alt="img">
-						</div>
-						<ul class="info">
-							<li>Leather Working</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="#">
-								<button type="submit" class="button w3l-cart" data-id="group-5">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-					<div class="cart-grid" id="cart-6">
-						<div class="img">
-							<img src="images/d3.jpg" alt="img">
-						</div>
-						<ul class="info">
-							<li>Ice Skating</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="#">
-								<button type="submit" class="button w3l-cart" data-id="group-6">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-					<div class="cart-grid" id="cart-7">
-						<div class="img">
-							<a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
-						</div>
-						<ul class="info">
-							<li>Guitar Playing</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="guitar.html">
-								<button type="submit" class="button w3l-cart" data-id="group-7">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-					<div class="cart-grid" id="cart-8">
-						<div class="img">
-							<img src="images/d6.jpg" alt="img">
-						</div>
-						<ul class="info">
-							<li>Dance</li>
-						</ul>
-						<div class="snipcart-details ">
-							<form action="#">
-								<button type="submit" class="button w3l-cart" data-id="group-8">Strategies & Groups</button>
-							</form>
-						</div>
-					</div>
-
-					<div class="clear"></div>
-				</div>
+			<div class="row">
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="images/d5.jpg" alt="img">
+			      <div class="caption">
+			        <h3>Laser Tag</h3>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="images/d1.jpg" alt="img">
+			      <div class="caption">
+			        <h3>Cooking Entry</h3>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="images/d8.jpg" alt="img">
+			      <div class="caption">
+			        <h3>Piano (mid-level)</h3>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+			<div class="row">
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="images/d4.png" alt="img">
+			      <div class="caption">
+			        <h3>Work Out Tips</h3>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="images/d7.jpeg" alt="img">
+			      <div class="caption">
+			        <h3>Leather Working</h3>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="images/d3.jpg" alt="img">
+			      <div class="caption">
+			        <h3>Ice Skating</h3>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+			<div class="row">
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
+			      <div class="caption">
+			        <h3>Guitar Playing</h3>
+			        <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="images/d6.jpg" alt="img">
+			      <div class="caption">
+			        <h3>Dance</h3>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			      </div>
+			    </div>
+			  </div>
 			</div>
 		</div>
 	<!-- //cart's-Product-Display -->
 		<div class="wthreecartaits wthreecartaits2 cart cart box_1">
-			<form action="#" class="last">
+			<form action="#" method="post" class="last">
 				<button class="w3view-cart" type="submit" name="submit" value="">back to top
 					<span class="fa fa-object-group" aria-hidden="true"></span>
 				</button>
