skill page change to bootstrap
change the style of skill page to bootstrap

--- a/skills_list.html
+++ b/skills_list.html
@@ -42,7 +42,8 @@
 			      <img src="images/d5.jpg" alt="img">
 			      <div class="caption">
 			        <h3>Laser Tag</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies and Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Groups</a> </p>
 			      </div>
 			    </div>
 			  </div>
