--- a/skills_list.html
+++ b/skills_list.html
@@ -14,11 +14,15 @@
 	<script type="text/javascript">
 	function search()
 	{
-		var srch=document.getElementById("searchtext").value;
-		// alert(document.getElementById("div1").style.display);
+		// var srch=document.getElementById("searchtext").value;
 		document.getElementById("div1").style.display="none";
 		document.getElementById("div2").style.display="none";
 		document.getElementById("div3").style.display="none";
+		// document.getElementById("div4").style.display="none";
+		// document.getElementById("div5").style.display="none";
+		// document.getElementById("div6").style.display="none";
+		// document.getElementById("div7").style.display="none";
+		// document.getElementById("div8").style.display="none";
 	}
 	</script>
 </head>
@@ -36,7 +40,7 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-default" href="skills_list.html" role="button">All Skills/Groups</a>
+                  <a class="btn btn-default" href="skills_list.html?" role="button">All Skills/Groups</a>
                   <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
                 </form>
                 <div class="navbar-form navbar-left">
@@ -44,11 +48,11 @@
 						Add new skill
 					</button>
                 </div>
-                <form class="navbar-form navbar-left" role="search">
+                <form action="#" type="post" class="navbar-form navbar-left" role="search">
 			        <div class="form-group">
 			            <input id="searchtext" type="text" class="form-control" placeholder="Search">
 			        </div>
-			        <button type="submit" class="btn btn-default" onclick="search()">Go</button>
+					<button class="btn btn-default" type="submit" onclick="search()">Go</button>
 			    </form>
             </div>
         </nav>
@@ -91,7 +95,7 @@
 			  </div>
 			</div>
 			<div class="row">
-			  <div class="col-sm-6 col-md-4">
+			  <div id="div4" class="col-sm-6 col-md-4">
 			    <div class="thumbnail">
 			      <img src="images/d4.jpeg" alt="img">
 			      <div class="caption">
@@ -101,7 +105,7 @@
 			      </div>
 			    </div>
 			  </div>
-			  <div class="col-sm-6 col-md-4">
+			  <div id="div5" class="col-sm-6 col-md-4">
 			    <div class="thumbnail">
 			      <img src="images/d7.jpeg" alt="img">
 			      <div class="caption">
@@ -111,7 +115,7 @@
 			      </div>
 			    </div>
 			  </div>
-			  <div class="col-sm-6 col-md-4">
+			  <div id="div6" class="col-sm-6 col-md-4">
 			    <div class="thumbnail">
 			      <img src="images/d3.jpg" alt="img">
 			      <div class="caption">
@@ -123,7 +127,7 @@
 			  </div>
 			</div>
 			<div class="row">
-			  <div class="col-sm-6 col-md-4">
+			  <div id="div7" class="col-sm-6 col-md-4">
 			    <div class="thumbnail">
 			      <a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
 			      <div class="caption">
@@ -133,7 +137,7 @@
 			      </div>
 			    </div>
 			  </div>
-			  <div class="col-sm-6 col-md-4">
+			  <div id="div8" class="col-sm-6 col-md-4">
 			    <div class="thumbnail">
 			      <img src="images/d6.jpg" alt="img">
 			      <div class="caption">
