--- a/skills_list.html
+++ b/skills_list.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="css/font-awesome.css" type="text/css" media="all">
-	<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
 	<script type="text/javascript">
 	function search()
@@ -184,16 +184,16 @@
 			    	<label for="name">Description:</label>
 			    	<textarea class="form-control" rows="4"></textarea>
 			  	</div>
-			  	<input id="lefile" type="file" style="display:none"> 
-				<div class="input-append" style="display:none"> 
-					<input id="photoCover" type="text" class="form-control"> 
-					<a class="btn btn-primary" role="button" onclick="$('input[id=lefile]').click();">Browse</a> 
-				</div> 
+			  	<input id="lefile" type="file" style="display:none">
+				<div class="input-append" style="display:none">
+					<input id="photoCover" type="text" class="form-control">
+					<a class="btn btn-primary" role="button" onclick="$('input[id=lefile]').click();">Browse</a>
+				</div>
 				<br>
 				<div class="form-group">
 					<label for="name">Choose a picture as your cover:</label>
 					<div class="input-group input-file" name="Fichier1">
-    					<input type="text" class="form-control" placeholder='Choose a file...' />			
+    					<input type="text" class="form-control" placeholder='Choose a file...' />
            				<span class="input-group-btn">
         				<button class="btn btn-default btn-choose" type="button" onclick="$('input[id=lefile]').click();">Choose</button>
     					</span>
